--- a/app/src/main/res/layout/fragment_live_chat.xml
+++ b/app/src/main/res/layout/fragment_live_chat.xml
@@ -9,10 +9,10 @@
 
 
     <TextView
-        android:id="@+id/botChatTV"
+        android:id="@+id/agentChatTV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Bot Response"
+        android:text="Agent Response"
         android:textSize="40sp"
         android:textColor="@color/white"
         app:layout_constraintTop_toTopOf="parent"
@@ -21,10 +21,10 @@
         android:layout_marginTop="24dp" />
 
     <TextView
-        android:id="@+id/botResponse"
+        android:id="@+id/agentResponse"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/botChatTV"
+        app:layout_constraintTop_toBottomOf="@id/agentChatTV"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginStart="16dp"
@@ -39,7 +39,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@id/botResponse"
+        app:layout_constraintTop_toBottomOf="@id/agentResponse"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="16dp"
