--- a/app/src/main/res/layout/fragment_live_chat.xml
+++ b/app/src/main/res/layout/fragment_live_chat.xml
@@ -34,19 +34,21 @@
         android:layout_marginTop="24dp"
         android:textColor="@color/white" />
 
-    <LinearLayout
-        android:id="@+id/linearLayout"
+    <TextView
+        android:id="@+id/userMessage"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
         app:layout_constraintTop_toBottomOf="@id/agentResponse"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="16dp"
         android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp">
+        android:layout_marginEnd="16dp"
+        android:textAlignment="textEnd"
+        android:textSize="20dp"
+        tools:text="Hello, how can I see my statement?"
+        android:layout_marginTop="24dp"
+        android:textColor="@color/yellow" />
 
-    </LinearLayout>
 
 
     <com.google.android.material.textfield.TextInputLayout
