--- a/app/src/main/res/layout/fragment_live_chat.xml
+++ b/app/src/main/res/layout/fragment_live_chat.xml
@@ -12,7 +12,7 @@
         android:id="@+id/agentChatTV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Agent Response"
+        android:text="LIVE AGENT"
         android:textSize="40sp"
         android:textColor="@color/white"
         app:layout_constraintTop_toTopOf="parent"
